--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=ZavrsniProjektBackend
+
+# src/main/resources/application.properties
+
+spring.datasource.url=jdbc:sqlserver://DESKTOP-AERP8RB:1433;databaseName=Zavrsni;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=SQL
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
