--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    runtimeOnly   'com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11'
+    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11'
+    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'net.postgis:postgis-jdbc:2023.1.0'
 
     // JWT i Security
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
@@ -42,6 +44,12 @@ dependencies {
 
     // Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // Geo dio
+    implementation 'org.locationtech.jts:jts-core:1.19.0'
+    implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
+    implementation 'net.postgis:postgis-jdbc:2023.1.0'
+
 }
 
 tasks.named('test') {
