--- a/build.gradle
+++ b/build.gradle
@@ -23,33 +23,37 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    test {
+        java {
+            srcDirs = ['src/test/java']
+        }
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11'
+
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'net.postgis:postgis-jdbc:2023.1.0'
 
-    // JWT i Security
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
-    // Validation
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-    // Geo dio
     implementation 'org.locationtech.jts:jts-core:1.19.0'
-    implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
-    implementation 'net.postgis:postgis-jdbc:2023.1.0'
-
+    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11'
 }
 
 tasks.named('test') {
